# betterspy

./: .gitignore  .pylintrc  Chebyshev2.mtx  Chebyshev2_b.mtx  Makefile  README.md  betterspy.py  bp_200.mtx  bp_600.mtx  orani678.mtx  orani678_b.mtx  rdb1250l.mtx  rdb3200l.mtx  setup.cfg  setup.py  test_requirements.txt  tox.ini  west0989.mtx  west1505.mtx
.circleci/: config.yml
.github/workflows/: ci.yml
betterspy/: __about__.py  __init__.py  cli.py  main.py
src/betterspy/: cli.py
test/: test.py  test_betterspy.py  test_readme.py
