[metadata]
name = betterspy
version = 0.1.3
author = Nico Schlömer
email = nico.schloemer@gmail.com
description = Show sparsity patterns of sparse matrices
url = https://github.com/nschloe/betterspy
project_urls =
    Code=https://github.com/nschloe/betterspy
    Issues=https://github.com/nschloe/betterspy/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
license_files = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Utilities

[options]
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    matplotlib
    numpy
    purepng
    scipy
python_requires = >=3.6
setup_requires =
    setuptools>=42
    wheel

[options.entry_points]
console_scripts =
    betterspy = betterspy.cli:main
